fixed article cards description cropping issue in tab and mobile

--- a/eds/blocks/related-stories/related-stories.css
+++ b/eds/blocks/related-stories/related-stories.css
@@ -64,6 +64,13 @@
   -webkit-line-clamp: 3
 }
 
+.related-stories-wrapper :is(.line-clamp-4) {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 4
+}
+
 .related-stories-wrapper :is(.block) {
   display: block
 }
@@ -90,6 +97,14 @@
 
 .related-stories-wrapper :is(.h-full) {
   height: 100%
+}
+
+.related-stories-wrapper :is(.\!h-32) {
+  height: 8rem !important
+}
+
+.related-stories-wrapper :is(.\!h-\[7\.5rem\]) {
+  height: 7.5rem !important
 }
 
 .related-stories-wrapper :is(.w-full) {
